[package]
name = "keytree"
version = "0.1.0"
authors = ["Eric Findlay <e.findlay@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
located_err = { path = "../located_err" }

[workspace]
members = [ "examples/hobbit" ]

[lib]
doctest = false
