[package]
name = "keytree"
version = "0.1.0"
authors = ["Eric Findlay <e.findlay@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }

[workspace]
members = [ "examples/hobbit" ]

[lib]
doctest = false

[dev-dependencies]
indoc = "1"
