[package]
name = "hobbit"
version = "0.1.0"
authors = ["Eric Findlay <e.findlay@protonmail.ch>"]
workspace = "../../"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keytree = { path = "../.." }
err = { path = "../../../err" }
